Make body width 100% to fix layout issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
+  width: 100%;
 }
 
 h1,
